--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,8 +1,7 @@
 .header {
   position: relative;
   background: #266AD9;
-  padding: 0 6vw;
-  padding-top: 0vw;
+  padding: 0 48px;
   z-index: 100;
   transition: transform 200ms ease;
   will-change: transform;
@@ -21,6 +20,9 @@
 }
 
 .inner {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
   min-height: 0;
   padding-block: clamp(.5rem, 2vw, 1.25rem);
   display: flex;
@@ -115,8 +117,8 @@ background: #FFFFFF33;
 
 @media (max-width:768px) {
   .header {
-    padding: 0 6vw;
-    padding-top: 2vw;
+  padding: 0 24px;
+  padding-top: 2vw;
   }
 
   .menu {
