--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -1,16 +1,22 @@
 .hero {
   background: #266AD9;
   color: #fff;
-  padding: 0 6vw;
+  padding: 0 48px;
 }
 
 .grid {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+
   display: grid;
-  align-items: top;
-  grid-template-columns: 1fr minmax(280px, 441.62px);
-  column-gap: clamp(40px, 8vw, 115px);
-  padding-top: clamp(40px, 5vw, 60px);
-  padding-bottom: clamp(48px, 6vw, 72px);
+  align-items: center;
+  grid-template-columns: minmax(520px, 1fr) 440px;
+
+  column-gap: 72px;
+
+  padding-top: 56px;
+  padding-bottom: 72px;
 }
 
 /* left text column */
@@ -123,7 +129,7 @@
 /* mobile */
 @media (max-width: 768px) {
   .hero {
-    padding: 0 6vw;
+  padding: 0 24px;
   }
 
   .grid {
